# edges-analysis

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  GHAModel_RMSAggregator(model=LinLog(parameters=None, n_terms=5, f_center=75.0, with_cmb=False, beta=-2.filter  GHAModel_RMSAggregator(model=LinLog(parameters=None, n_terms=5, f_center=75.0, with_cmb=False, beta=-2.flag_info  GHAModel_RMSAggregator(model=LinLog(parameters=None, n_terms=5, f_center=75.0, with_cmb=False, beta=-2.info  GHAModel_RMSAggregator(model=LinLog(parameters=None, n_terms=5, with_cmb=False, f_center=75.0, transform=ScaleTransform(scale=75.0), beta=-2.filter  GHAModel_RMSAggregator(model=LinLog(parameters=None, n_terms=5, with_cmb=False, f_center=75.0, transform=ScaleTransform(scale=75.0), beta=-2.flag_info  GHAModel_RMSAggregator(model=LinLog(parameters=None, n_terms=5, with_cmb=False, f_center=75.0, transform=ScaleTransform(scale=75.0), beta=-2.info  GHAModel_TotalPowerAggregator(band=(0, inf), model=FourierDay(parameters=None, n_terms=40), init_threshold=1.filter  GHAModel_TotalPowerAggregator(band=(0, inf), model=FourierDay(parameters=None, n_terms=40), init_threshold=1.flag_info  GHAModel_TotalPowerAggregator(band=(0, inf), model=FourierDay(parameters=None, n_terms=40), init_threshold=1.info  GHAModel_TotalPowerAggregator(band=(0, inf), model=FourierDay(parameters=None, n_terms=40, transform=IdentityTransform()), init_threshold=1.filter  GHAModel_TotalPowerAggregator(band=(0, inf), model=FourierDay(parameters=None, n_terms=40, transform=IdentityTransform()), init_threshold=1.flag_info  GHAModel_TotalPowerAggregator(band=(0, inf), model=FourierDay(parameters=None, n_terms=40, transform=IdentityTransform()), init_threshold=1.info  LICENSE.txt  README.md  README.rst  agents.md  antenna_reflection_coefficient.py  basic.py  calibration.py  calibration_mid_band.py  calibration_receiver1.py  comparison_mid_band_low_band.py  data.npy  data_loading.py  data_models.py  derp.h5  edges.py  edges_polychord_mirocha_extension.py  example-obs-definition.yaml  (+17 more)
.github/workflows/: changelog.yaml  deploy.yaml  pre_commit.yaml  release-draft.yml  test-deploy.yaml  test_suite.yaml
devel/: Untitled.ipynb  check_rms.ipynb  example_level1_settings.yaml  example_level2_settings.yaml  example_level3_settings.yaml  example_level4_settings.yaml  level1_low1_settings.yaml
docs/: Makefile  changelog.rst  cli_usage.rst  conf.py  environment.yaml  index.rst  library_usage.rst  quickstart.rst  structure.rst  tutorials.rst  usage_overview.rst
docs/demos/: beam_factor_sensitivities.ipynb  comparison_of_beamfactor_to_alan.ipynb  constructing_b18_manually.ipynb  linear_modeling.ipynb  processing_bowman2018.ipynb  reflection_coefficients.ipynb  rfi_algorithm_exploration.ipynb  simple_analysis_example.ipynb  using_alanmod_b18.ipynb
docs/reference/: alanmode.rst  edges-analysis.rst  high_level_analysis_methods.rst  index.rst  io.rst  linear_models.rst  low_level_analysis_methods.rst  receiver_calibration.rst  simulation.rst  utilities.rst
examples/: edges_polychord.py  mid_band_polychord.py
old/: MPI_test_marginalized_foregrounds.py  absolute_temperature.py  analysis_flow_diagram.odp  detection_rejection.py  edges.py  edges_enterprise.py  high_band_edges.py  high_level_analyses.py  jordan_python27.py  mid_band.py  old_MPI_test.py  old_edges.py  old_fialkov_python27.py  old_high_band_edges.py  old_limits.py  old_mari.py  old_mid_band.py  raulscode.py  reflection_coefficient.py
pip-wheel-metadata/edges_analysis.dist-info/: LICENSE.txt  METADATA  entry_points.txt  top_level.txt
src/edges/: __init__.py  cached_property.py  cli.py  config.py  frequencies.py  logging.py  testing.py  tools.py  types.py  units.py
src/edges_analysis/: __init__.py  _coordinates_alan.py  _data_retrieval.py  _workflow.py  antenna_reflection_coefficient.py  aux_data.py  basic.py  beams.py  calibration.py  calibration_receiver1.py  cli.py  config.py  const.py  coordinates.py  data_models.py  datamodel.py  edges-3_usage.ipynb  edges.py  edges3_workflow_output_visualization.ipynb  edges3io.py  edges3io_usage.ipynb  edges_polychord.py  edges_polychord_mirocha_extension.py  examples_ares.py  groupdays.py  gsdata.py  high_level_analyses.py  instrument_covariance_matrix.py  mid_band_polychord.py  plots.py  polychord_example.py  rfi.py  scripts.py  sky_models.py  tools.py
tests/: __init__.py  conftest.py  mock_gsdata.py  test_alan_coordinates.py  test_averaging.py  test_basic.py  test_beams.py  test_cached_property.py  test_calibrate.py  test_cli.py  test_config.py  test_coords.py  test_filters.py  test_freqbin.py  test_gsdata.py  test_levels.py  test_loss.py  test_plots.py  test_pooch_data.py  test_progressfile.py  test_rms_filter.py  test_sky_models.py  test_tools.py  test_units.py  test_workflow.py  test_workflow_outputs.py
tests/alanmode/: test_alanmode.py  test_b18_cal.py  test_edges3_alan.py  test_edges3_alan_2022_316.py  test_edges3_alan_2022_316_cli.py  test_edges3_alan_2023_210.py  test_edges3_alan_cli.py
tests/analysis/: __init__.py  conftest.py  test_add_aux.py  test_analysis_plots.py  test_calibrate.py  test_loss.py  test_plots.py  test_tools.py
tests/averaging/: test_averaging.py  test_combiners.py  test_freqbin.py  test_lstbin.py
tests/cal/: test_alanmode.py  test_antenna_s11.py  test_apply.py  test_b18_cal.py  test_b18_s11.py  test_cached_property.py  test_cal_cli.py  test_calibrator.py  test_calobs.py  test_edges3.py  test_freq.py  test_full_calibration.py  test_input_source.py  test_load_data.py  test_network_component_models.py  test_noise_waves.py  test_plots.py  test_receiver_cal.py  test_reflection_coefficient.py  test_s11.py  test_spec.py  test_switch_correction.py  test_temp.py  test_thermistor.py
tests/data/: S11_blade_low_band_2015_342_03_14.txt.csv
tests/filters/: test_filters.py  test_lstmodel.py  test_xrfi.py
tests/inference/: conftest.py  test_eor_models.py  test_foregrounds.py  test_semi_linear_fit.py
(+615 files in other folders)
